fix: text align

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ p {
   top: 50%;
   left: 50%;
   font-size: 20px;
-  text-align: right;
+  text-align: left;
 } 
 
 a {
@@ -86,6 +86,10 @@ footer {
   body {
     margin: 20px;
   }
+  pingu {
+    height: 200px;
+    width: 200px;
+  }
 }
 
 ul {
@@ -95,6 +99,10 @@ ul {
 .pingu {
   display: flex;
   justify-content: center; 
+}
+.pingu img {
+  height: 400px;
+  width: 200px;
 }
 
 hr {
